# slashstep_server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md  compose.yaml  postgres-language-server.jsonc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bypass-rust-tests.yml  codeql.yml  publish-image-to-github-packages.yml  run-rust-tests-on-development-environment.yml  run-rust-tests-on-pull-request.yml  run-rust-tests.yml
docs/api/endpoints/: access-policies.md
docs/contributing/: environments.md  style-guide.md
docs/installation/: installing-slashstep-server-on-windows.md  installing-slashstep-server-with-podman-desktop.md
src/: access_policy.rs  errors.rs  lib.rs  main.rs  middleware.rs  pre_definitions.rs  predefinitions.rs  resources.rs  routes.rs  tests.rs  utilities.rs
src/errors/: not_found_error.rs  resource_already_exists_error.rs  slashstepql_invalid_limit_error.rs
src/middleware/: authentication_middleware.rs  http_request_middleware.rs  http_transaction_middleware.rs
src/queries/: create_general_types.sql
src/queries/access_policies/: create_function_can_principal_get_access_policy.sql  create_function_can_principal_get_resource.sql  create_function_get_initial_resource_id_from_access_policy.sql  create_function_get_principal_access_policies.sql  delete-access-policy-row.sql  get-access-policy-row-by-id.sql  get_access_policy_row_by_id.sql  grant-admin-permissions.sql  initialize-access-policies-table.sql  initialize-hydrated-access-policies-view.sql  initialize_access_policies_table.sql  insert-access-policy-row.sql  insert_access_policy_row.sql  list_access_policies.sql
src/queries/action_log_entries/: add_access_policies_reference.sql  delete_action_log_entry_row.sql  delete_expired_action_log_entry_rows.sql  get_action_log_entry_row_by_id.sql  initialize_action_log_entries_table.sql  insert_action_log_entry_row.sql
src/queries/actions/: delete-action-row.sql  get_action_row_by_id.sql  get_action_row_by_name.sql  initialize_actions_table.sql  initialize_hydrated_actions_view.sql  insert_action_row.sql  insert_default_actions.sql
src/queries/app-authorization-credentials/: get-app-authorization-credential-row-by-id.sql
src/queries/app_authorization_credentials/: delete_app_authorization_credential_row_by_id.sql  initialize_app_authorization_credentials_table.sql  insert_app_authorization_credential_row.sql
src/queries/app_authorizations/: delete_app_authorization_row_by_id.sql  get-app-authorization-row-by-id.sql  get_app_authorization_by_oauth_authorization_id.sql  initialize-app-authorizations-table.sql  initialize_app_authorizations_table.sql  initialize_hydrated_app_authorizations_view.sql  insert_app_authorization_row.sql
src/queries/app_credentials/: delete_app_credential_row_by_id.sql  get_app_credential_row_by_id.sql  initialize_app_credentials_table.sql  insert_app_credential_row.sql
src/queries/apps/: delete-app-row-by-id.sql  get_app_row_by_id.sql  initialize_apps_table.sql  insert_app_row_by_id.sql
src/queries/configuration_values/: delete_configuration_value_row_by_id.sql  get_configuration_value_row_by_id.sql  initialize_configuration_values_table.sql  insert_configuration_value_row.sql
src/queries/configurations/: get_configuration_row_by_name.sql  initialize_configurations_table.sql  insert_configuration_row.sql
src/queries/delegation_policies/: initialize_delegation_policies_table.sql
src/queries/field_choices/: delete_field_choice_row_by_id.sql  get_field_choice_row_by_id.sql  initialize_field_choices_table.sql  insert_field_choice_row.sql
src/queries/field_values/: delete_field_value_row_by_id.sql  get_field_value_row_by_id.sql  initialize_field_values_table.sql  insert_field_value_row.sql
src/queries/fields/: delete_field_row_by_id.sql  get_field_row_by_id.sql  initialize_fields_table.sql  insert_field_row.sql
src/queries/group_memberships/: get_group_membership_row_by_id.sql  initialize_group_memberships_table.sql
src/queries/groups/: delete_group_row_by_id.sql  get_group_row_by_id.sql  initialize_groups_table.sql  insert_group_row.sql
src/queries/http-requests/: create-http-requests-table.sql  (+2 more)
src/resources/: access_policy.rs  access_policy.tests.rs  action.rs  action.tests.rs  app.rs  app_authorization.rs  app_authorization_credential.rs  app_credential.rs  group.rs  http_request.rs  http_transaction.rs  item.rs  milestone.rs  project.rs  role.rs  server_log_entry.rs  session.rs  user.rs  workspace.rs
src/routes/: access-policies.rs  mod.rs
src/utilities/: principal_permission_verifier.rs  resource_hierarchy.rs  reusable_route_handlers.rs  route_handler_utilities.rs  slashstepql.rs
(+245 files in other folders)
