[package]
name = "slashstep_server"
version = "0.1.0"
edition = "2024"
description = "A server for hosting a Slashstep Server instance."
readme = "README.md"
homepage = "https://slashstep.com"
repository = "https://github.com/SlashstepGroup/server"
license = "MPL-2.0"
keywords = ["project management", "problem management", "issue tracking"]
publish = false

[dependencies]
axum = "0.8.7"
colored = "3.0.0"
dotenvy = "0.15.7"
local-ip-address = "0.6.5"
pg_escape = "0.1.1"
postgres = { version = "0.19.12", features = ["with-uuid-1"] }
postgres-types = { version = "0.2.11", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v7"] }

[dev-dependencies]
testcontainers = { version = "0.25.2", features = ["blocking"] }
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
reqwest = { version = "0.12.24", features = ["json"] }